LinuxServer/Apache2/IPTables/iptables/iptables.rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Wed Sep  3 13:43:52 2025
*filter
:INPUT DROP [4:352]
:FORWARD DROP [0:0]
:OUTPUT DROP [3389:349524]
:LOGGING - [0:0]
:f2b-blacklist - [0:0]
:ufw-after-forward - [0:0]
:ufw-after-input - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-before-input - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-output - [0:0]
:ufw-reject-forward - [0:0]
:ufw-reject-input - [0:0]
:ufw-reject-output - [0:0]
:ufw-track-forward - [0:0]
:ufw-track-input - [0:0]
:ufw-track-output - [0:0]
[1040:93970] -A INPUT -i enp2s0 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
[155:225121] -A INPUT -i enp2s0 -p tcp -m tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
[2020:253229] -A INPUT -i enp2s0 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
[11:5527] -A INPUT -i enp2s0 -p tcp -m tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT
[14235:1245040] -A INPUT -i enp2s0 -p tcp -m multiport --dports 22,80,443 -m state --state NEW,ESTABLISHED -j ACCEPT
[0:0] -A INPUT -i enp2s0 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
[0:0] -A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -m recent --set --name ssh --mask 255.255.255.255 --rsource
[0:0] -A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -m recent --update --seconds 30 --hitcount 10 --rttl --name ssh --mask 255.255.255.255 --rsource -j DROP
[2:140] -A INPUT -p tcp -m tcp --dport 22 -m limit --limit 2/sec -j ACCEPT
[0:0] -A INPUT -p tcp -m tcp --dport 22 -m connlimit --connlimit-above 5 --connlimit-mask 32 --connlimit-saddr -j DROP
[0:0] -A INPUT -i enp2s0 -p tcp -m tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT
[2:168] -A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
[1344:116997] -A INPUT -i lo -j ACCEPT
[368:51776] -A INPUT -i enp2s0 -p udp -m udp --sport 53 -j ACCEPT
[0:0] -A INPUT -i enp2s0 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT
[0:0] -A INPUT -p tcp -m tcp --dport 80 -m limit --limit 25/min --limit-burst 100 -j ACCEPT
[101:12270] -A INPUT -j LOGGING
[932:188563] -A OUTPUT -o enp2s0 -p tcp -m tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
[162:12916] -A OUTPUT -o enp2s0 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
[1493:490252] -A OUTPUT -o enp2s0 -p tcp -m tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT
[33:6525] -A OUTPUT -o enp2s0 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
[14333:5532345] -A OUTPUT -o enp2s0 -p tcp -m multiport --sports 22,80,443 -m state --state ESTABLISHED -j ACCEPT
[0:0] -A OUTPUT -o enp2s0 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
[0:0] -A OUTPUT -o enp2s0 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
[2:168] -A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
[1344:116997] -A OUTPUT -o lo -j ACCEPT
[368:24498] -A OUTPUT -o enp2s0 -p udp -m udp --dport 53 -j ACCEPT
[0:0] -A OUTPUT -o enp2s0 -p tcp -m tcp --sport 25 -m state --state ESTABLISHED -j ACCEPT
[101:12270] -A LOGGING -m limit --limit 2/min -j LOG --log-prefix "IPTables Packet Dropped: " --log-level 7
[101:12270] -A LOGGING -j DROP


# Block anything from China
# These rules are pulled from ipset's china list
# The source file is at /etc/cn.zone (which in turn is generated by a shell script at /etc/block-china.sh )
# -A INPUT -p tcp -m set --match-set china src -j DROP

-A INPUT -p tcp -m set --match-set af src -j DROP
-A INPUT -p tcp -m set --match-set au src -j DROP
-A INPUT -p tcp -m set --match-set al src -j DROP
-A INPUT -p tcp -m set --match-set dz src -j DROP
-A INPUT -p tcp -m set --match-set aq src -j DROP
-A INPUT -p tcp -m set --match-set br src -j DROP
-A INPUT -p tcp -m set --match-set ar src -j DROP
-A INPUT -p tcp -m set --match-set cn src -j DROP
-A INPUT -p tcp -m set --match-set lb src -j DROP
-A INPUT -p tcp -m set --match-set my src -j DROP
-A INPUT -p tcp -m set --match-set ly src -j DROP
-A INPUT -p tcp -m set --match-set lr src -j DROP
-A INPUT -p tcp -m set --match-set la src -j DROP
-A INPUT -p tcp -m set --match-set jp src -j DROP
-A INPUT -p tcp -m set --match-set jm src -j DROP
-A INPUT -p tcp -m set --match-set jo src -j DROP
-A INPUT -p tcp -m set --match-set kz src -j DROP
-A INPUT -p tcp -m set --match-set ke src -j DROP
-A INPUT -p tcp -m set --match-set hk src -j DROP
-A INPUT -p tcp -m set --match-set ml src -j DROP
-A INPUT -p tcp -m set --match-set mx src -j DROP
-A INPUT -p tcp -m set --match-set fm src -j DROP
-A INPUT -p tcp -m set --match-set md src -j DROP
-A INPUT -p tcp -m set --match-set mc src -j DROP
-A INPUT -p tcp -m set --match-set mn src -j DROP
-A INPUT -p tcp -m set --match-set ms src -j DROP
-A INPUT -p tcp -m set --match-set ma src -j DROP
-A INPUT -p tcp -m set --match-set mz src -j DROP
-A INPUT -p tcp -m set --match-set mm src -j DROP
-A INPUT -p tcp -m set --match-set nr src -j DROP
-A INPUT -p tcp -m set --match-set na src -j DROP
-A INPUT -p tcp -m set --match-set np src -j DROP
-A INPUT -p tcp -m set --match-set nl src -j DROP
-A INPUT -p tcp -m set --match-set an src -j DROP
-A INPUT -p tcp -m set --match-set nc src -j DROP
-A INPUT -p tcp -m set --match-set nz src -j DROP
-A INPUT -p tcp -m set --match-set ni src -j DROP
-A INPUT -p tcp -m set --match-set ne src -j DROP
-A INPUT -p tcp -m set --match-set ng src -j DROP
-A INPUT -p tcp -m set --match-set nu src -j DROP
-A INPUT -p tcp -m set --match-set nf src -j DROP
-A INPUT -p tcp -m set --match-set mp src -j DROP
-A INPUT -p tcp -m set --match-set no src -j DROP
-A INPUT -p tcp -m set --match-set om src -j DROP
-A INPUT -p tcp -m set --match-set pk src -j DROP
-A INPUT -p tcp -m set --match-set pw src -j DROP
-A INPUT -p tcp -m set --match-set pa src -j DROP
-A INPUT -p tcp -m set --match-set pg src -j DROP
-A INPUT -p tcp -m set --match-set py src -j DROP
-A INPUT -p tcp -m set --match-set pe src -j DROP
-A INPUT -p tcp -m set --match-set ph src -j DROP
-A INPUT -p tcp -m set --match-set pn src -j DROP
-A INPUT -p tcp -m set --match-set pl src -j DROP
-A INPUT -p tcp -m set --match-set pr src -j DROP
-A INPUT -p tcp -m set --match-set qa src -j DROP
-A INPUT -p tcp -m set --match-set re src -j DROP
-A INPUT -p tcp -m set --match-set ro src -j DROP
-A INPUT -p tcp -m set --match-set ru src -j DROP
-A INPUT -p tcp -m set --match-set rw src -j DROP
-A INPUT -p tcp -m set --match-set kn src -j DROP
-A INPUT -p tcp -m set --match-set lc src -j DROP
-A INPUT -p tcp -m set --match-set vc src -j DROP
-A INPUT -p tcp -m set --match-set ws src -j DROP
-A INPUT -p tcp -m set --match-set sm src -j DROP
-A INPUT -p tcp -m set --match-set st src -j DROP
-A INPUT -p tcp -m set --match-set sn src -j DROP
-A INPUT -p tcp -m set --match-set sa src -j DROP
-A INPUT -p tcp -m set --match-set sc src -j DROP
-A INPUT -p tcp -m set --match-set sl src -j DROP
-A INPUT -p tcp -m set --match-set sg src -j DROP
-A INPUT -p tcp -m set --match-set sk src -j DROP
-A INPUT -p tcp -m set --match-set si src -j DROP
-A INPUT -p tcp -m set --match-set sb src -j DROP
-A INPUT -p tcp -m set --match-set so src -j DROP
-A INPUT -p tcp -m set --match-set za src -j DROP
-A INPUT -p tcp -m set --match-set gs src -j DROP
-A INPUT -p tcp -m set --match-set es src -j DROP
-A INPUT -p tcp -m set --match-set lk src -j DROP
-A INPUT -p tcp -m set --match-set sh src -j DROP
-A INPUT -p tcp -m set --match-set pm src -j DROP
-A INPUT -p tcp -m set --match-set sd src -j DROP
-A INPUT -p tcp -m set --match-set sr src -j DROP
-A INPUT -p tcp -m set --match-set sj src -j DROP
-A INPUT -p tcp -m set --match-set sz src -j DROP
-A INPUT -p tcp -m set --match-set se src -j DROP
-A INPUT -p tcp -m set --match-set ch src -j DROP
-A INPUT -p tcp -m set --match-set tw src -j DROP
-A INPUT -p tcp -m set --match-set tj src -j DROP
-A INPUT -p tcp -m set --match-set tz src -j DROP
-A INPUT -p tcp -m set --match-set th src -j DROP
-A INPUT -p tcp -m set --match-set tg src -j DROP
-A INPUT -p tcp -m set --match-set tk src -j DROP
-A INPUT -p tcp -m set --match-set to src -j DROP
-A INPUT -p tcp -m set --match-set tt src -j DROP
-A INPUT -p tcp -m set --match-set tn src -j DROP
-A INPUT -p tcp -m set --match-set tr src -j DROP
-A INPUT -p tcp -m set --match-set tn src -j DROP
-A INPUT -p tcp -m set --match-set tm src -j DROP
-A INPUT -p tcp -m set --match-set tc src -j DROP
-A INPUT -p tcp -m set --match-set tv src -j DROP
-A INPUT -p tcp -m set --match-set ug src -j DROP
-A INPUT -p tcp -m set --match-set ua src -j DROP
-A INPUT -p tcp -m set --match-set ae src -j DROP
-A INPUT -p tcp -m set --match-set gb src -j DROP
-A INPUT -p tcp -m set --match-set um src -j DROP
-A INPUT -p tcp -m set --match-set uy src -j DROP
-A INPUT -p tcp -m set --match-set um src -j DROP
-A INPUT -p tcp -m set --match-set uz src -j DROP
-A INPUT -p tcp -m set --match-set vu src -j DROP
-A INPUT -p tcp -m set --match-set ve src -j DROP
-A INPUT -p tcp -m set --match-set vn src -j DROP
-A INPUT -p tcp -m set --match-set vg src -j DROP
-A INPUT -p tcp -m set --match-set vi src -j DROP
-A INPUT -p tcp -m set --match-set wf src -j DROP
-A INPUT -p tcp -m set --match-set eh src -j DROP
-A INPUT -p tcp -m set --match-set eh src -j DROP
-A INPUT -p tcp -m set --match-set ye src -j DROP
-A INPUT -p tcp -m set --match-set yu src -j DROP
-A INPUT -p tcp -m set --match-set zm src -j DROP
-A INPUT -p tcp -m set --match-set zw src -j DROP
-A INPUT -p tcp -m set --match-set ie src -j DROP
-A INPUT -p tcp -m set --match-set il src -j DROP
-A INPUT -p tcp -m set --match-set ir src -j DROP
-A INPUT -p tcp -m set --match-set hn src -j DROP
COMMIT
# Completed on Wed Sep  3 13:43:52 2025
